// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdPager The component is rendered 1`] = `
<div class="pager pager--wide">
  <nav tabindex="0" class="pager__items" style="height: 40px; width: 280px;">
    <ul class="pager__items__track" style="transform: translateX(40px);">
      <div class="pager__items__offset" style="flex-basis: 0px;"></div>
      <li aria-current="true" class="pager__items__item pager__items__item--size-small isActive" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          1
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          2
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          3
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          4
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-small" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          5
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          6
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          7
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          8
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          9
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          10
        </span></li>
    </ul>
  </nav>
</div>
`;

exports[`HdPager should render the condensed pager 1`] = `
<div class="pager pager--condensed">
  <nav tabindex="0" class="pager__items" style="height: 40px; width: 280px;">
    <ul class="pager__items__track" style="transform: translateX(0px);">
      <div class="pager__items__offset" style="flex-basis: 0px;"></div>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          1
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          2
        </span></li>
      <li aria-current="true" class="pager__items__item pager__items__item--size-regular isActive" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          3
        </span></li>
    </ul>
  </nav>
</div>
`;

exports[`HdPager should render the wide pager 1`] = `
<div class="pager pager--wide">
  <nav tabindex="0" class="pager__items" style="height: 40px; width: 280px;">
    <ul class="pager__items__track" style="transform: translateX(40px);">
      <div class="pager__items__offset" style="flex-basis: 0px;"></div>
      <li aria-current="true" class="pager__items__item pager__items__item--size-small isActive" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          1
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          2
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          3
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          4
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-small" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          5
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          6
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          7
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          8
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          9
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          10
        </span></li>
    </ul>
  </nav>
</div>
`;

exports[`HdPager should render the wide pager with white color 1`] = `
<div class="pager pager--wide isWhite">
  <nav tabindex="0" class="pager__items" style="height: 40px; width: 280px;">
    <ul class="pager__items__track" style="transform: translateX(40px);">
      <div class="pager__items__offset" style="flex-basis: 0px;"></div>
      <li aria-current="true" class="pager__items__item pager__items__item--size-small isActive" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          1
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          2
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          3
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-regular" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          4
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-small" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          5
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          6
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          7
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          8
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          9
        </span></li>
      <li aria-current="false" class="pager__items__item pager__items__item--size-tiny" style="height: 40px; width: 40px;"><span class="pager__items__item__text">
          10
        </span></li>
    </ul>
  </nav>
</div>
`;
